--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
             <a class="nav-link nav-text text-light" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-text text-light" href="#">About Us</a>
+            <a class="nav-link nav-text text-light" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-text text-light" href="#">Contact Us</a>
+            <a class="nav-link nav-text text-light" href="contact.html">Contact Us</a>
           </li>
           <li class="nav-item ms-2">
             <a href="book.html" class="btn btn-warning text-dark fw-bold px-2 px-md-4">BOOK A TABLE</a>
